# localstack-pro-samples

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  PORTING.md  README.md  openspec.yaml  pyproject.toml  requirements-dev.txt  run-samples.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/scripts/: build-matrix.sh
.github/workflows/: run-samples.yml
docs/: LOCALSTACK.md
openspec/changes/port-high-priority-samples/: proposal.md  tasks.md
samples/: conftest.py
samples/apigw-custom-domain/python/: test_apigw_custom_domain.py
samples/apigw-websockets/javascript/: test_apigw_websockets.py
samples/appsync-graphql-api/python/: README.md  test_appsync_graphql_api.py
samples/cloudwatch-metrics-aws/python/: test_cloudwatch_metrics.py
samples/codecommit-git-repo/python/: test_codecommit_git_repo.py
samples/ec2-docker-instances/python/: README.md  test_ec2_docker.py
samples/ecs-ecr-app/python/: test_ecs_ecr_app.py
samples/emr-serverless-spark/java/: test_emr_serverless_spark.py
samples/glacier-s3-select/python/: test_glacier_s3_select.py
samples/glue-etl-jobs/python/: test_glue_etl_jobs.py
samples/glue-msk-schema-registry/python/: test_glue_msk_schema_registry.py
samples/glue-redshift-crawler/python/: README.md  test_glue_redshift_crawler.py
samples/iam-policy-enforcement/python/: README.md  test_iam_enforcement.py
samples/lambda-cloudfront/python/: README.md  test_lambda_cloudfront.py
samples/lambda-container-image/python/: Dockerfile  handler.py  test_lambda_container_image.py
samples/lambda-layers/javascript/: README.md  (+2 more)
(+296 files in other folders)
